style.css
/* ... */
.carosel {
    display: flex;
    white-space: nowrap;
    margin: 0 auto;
    overflow: hidden;

}

.group {
    display: flex;
    align-items: center;
    gap: 25px;
    padding-right: 25px;
    animation: scroll 30s linear infinite;
}


@keyframes scroll {
    0% {
        transform: translateX(0);
    }

    100% {
        transform: translateX(-100%);
    }
}


/* Leaf */
.leaf-container {
    max-width: 1370px;
    margin: 0 auto;
    padding: 50px 35px 71px 35px;
}

.leafy-title-div {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 65px 20px 65px;
}

.leafy-con {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 504px;
}

.leaf-title {
    font-family: var(--font-manrope);
    font-weight: var(--font-secondary-weight);
    font-size: 18px;
    line-height: var(--font-base-line-height);
    letter-spacing: 0%;
    text-transform: uppercase;
    color: var(--font-root-color);

}

.leafy {
    text-decoration: none;
    font-family: var(--font-manrope);
    font-weight: var(--font-secondary-weight);
    font-size: 16px;
    line-height: 135%;
    letter-spacing: 0%;
    color: var(--font-root-color);
    position: relative;
    text-underline-offset: 5px;
    padding-left: 15px;
}

.mission-link {
    text-decoration: none;
    position: relative;
}

.mission-link::before {
    position: absolute;
    content: "";
    top: 36%;
    left: -11%;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: var(--font-root-color);

}

.mission-link::after {
    position: absolute;
    content: "";
    top: 101%;
    left: -10%;
    width: 92px;
    height: 1px;
    background-color: var(--font-root-color);
    animation: disappear-reappear-out 0.8s ease forwards;
}

.mission-link:hover::after {
    animation: disappear-reappear-in 0.8s ease forwards;
}


.leafy-2::before {
    position: absolute;
    content: "";
    top: 30%;
    left: -10%;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: var(--font-root-color);
}

.leafy-2 a::after {
    position: absolute;
    content: "";
    top: 92%;
    left: -10%;
    width: 125px;
    height: 1px;
    background-color: var(--font-root-color);
    animation: disappear-reappear-out 0.8s ease forwards;
}

.leafy-2 a:hover::after{
    animation: disappear-reappear-in 0.8s ease forwards;
}


.leafy a {
    font-family: var(--font-manrope);
    font-weight: 600;
    font-size: 16px;
    line-height: 135%;
    letter-spacing: 0%;
    color: var(--font-root-color);
    text-underline-offset: 4px;
}

.leaf-div {
    padding-top: 18px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.leaf-img {
    max-width: 633px;
    max-height: 633px;
    margin: 0 auto;
}

.pestu {
    font-family: var(--font-articulate);
    font-weight: 600;
    font-size: var(--font-large-size);
    line-height: 110.00000000000001%;
    letter-spacing: 0%;
    text-align: center;
    max-width: 863px;
}

.vdaka {
    font-family: var(--font-manrope);
    font-weight: var(--font-secondary-weight);
    font-size: 16px;
    line-height: var(--font-secondary-line-height);
    letter-spacing: 0%;
    text-align: center;
    color: var(--font-root-color);
    max-width: 715px;
    margin-top: 50px;
    margin-bottom: 45px;
}

.zistit {
    font-family: var(--font-manrope);
    font-weight: 600;
    font-size: var(--font-secondary-size);
    line-height: 140%;
    letter-spacing: 0;
    text-transform: uppercase;
    padding: 14.5px 30px 14.5px 47px;
    text-decoration: none;
    background-color: var(--primary-bg-color);
    border-radius: 30px;
    color: var(--font-root-color);
    position: relative;
}

.zistit::before {
    content: "";
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--font-root-color);
    position: absolute;
    left: 14%;
    top: 40%;
}

.leaf-img-div {
    position: relative;
}

.regenerate {
    font-family: var(--font-articulate);
    font-weight: var(--font-secondary-weight);
    font-size: 25px;
    line-height: var(--font-base-line-height);
    letter-spacing: 0;
    text-align: right;
    color: var(--font-root-color);
    opacity: 0;
    animation: fadeIn 1.5s ease forwards;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.regenerate-item-1 {
    position: absolute;
    top: 15%;
    left: -6%;
    animation-delay: 0.3s;
}

.regenerate-item-1::after {
    content: "";
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--font-root-color);
    position: absolute;
    right: -11%;
    top: 30%;
}

.regenerate-item-2 {
    position: absolute;
    top: 27%;
    right: -4%;
    animation-delay: 0.6s;
}

.regenerate-item-2::before {
    content: "";
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--font-root-color);
    position: absolute;
    left: -11%;
    top: 30%;
}

.regenerate-item-3 {
    position: absolute;
    bottom: 24%;
    right: 4%;
    animation-delay: 0.9s;
}

.regenerate-item-3::before {
    content: "";
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--font-root-color);
    position: absolute;
    left: -11%;
    top: 30%;
}

/* 24ton */
.content-div {
    display: flex;
    flex-direction: column;
    gap: 45px;
}

.twenty-four-container {
    max-width: 1370px;
    margin: 0 auto;
    padding: 50px 35px 74px 35px;
}

.leafy-title-div-2 {
    padding: 0 0px 20px 0px;
}

.twenty-four {
    padding: 0 65px;
}

.btn-v1 {
    background-color: var(--font-base-color);
}

.img-content-div {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.image-seventy {
    padding-left: 70px;
    padding-bottom: 70px;
    padding-top: 34px;
    width: 540px;
    height: 540px;
}
/* ... */

